# pysentimiento

./: .gitignore  CHANGELOG.md  CLASSIFIERS.md  DISTRIBUTE.md  LICENSE.md  Pipfile  README.md  TRAIN.md  TRAIN_EVALUATE.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: run_tests.yml  smoke_tests.yml
config/: config.ini.template
data/: results.csv  results_en.csv  results_es.csv  results_it.csv  results_pt.csv
docs/: HATE_SPEECH.md  REFERENCES.md  TASKS.md  TRAIN.md
evaluations/: emotion_bert_base.json  emotion_bertweet_base.json  emotion_beto.json  emotion_distilbert_en.json  emotion_distilbert_es.json  emotion_mbert_en.json  emotion_mbert_es.json  emotion_roberta.json  sentiment_bert_base.json  sentiment_bertweet_base.json  sentiment_beto.json  sentiment_distilbert_en.json  sentiment_distilbert_es.json  sentiment_mbert_en.json  sentiment_mbert_es.json  sentiment_roberta_base.json
evaluations/en/: bert.json  bertweet.json  beto.json  mbert_uncased.json  roberta.json  robertuito.json
evaluations/es/: bertin.json  beto_cased.json  beto_uncased.json  birnn_cc.json  birnn_twitter.json  electricidad.json  ffn_cc.json  ffn_twitter.json  mbert_uncased.json  rnn_cc.json  rnn_twitter.json  roberta.json  robertuito.json
evaluations/hate_speech/: beto-taskb-hier.json  beto-taskb.json  robertuito-taskb-hier.json  robertuito-taskb.json
models/beto-sentiment-analysis/: README.md
notebooks/: Datasets stats.ipynb  Emotion Results.ipynb  Exploratory Analysis - emotion en.ipynb  Exploratory Analysis - emotion es.ipynb  Exploratory Analysis en 2017.ipynb  Exploratory Analysis en.ipynb  Exploratory Analysis.ipynb  PySentimiento_Sentiment_Analysis_in_Spanish.ipynb  Results en.ipynb  Results es.ipynb  Results it.ipynb  Results pt.ipynb  Results.ipynb  Sentiment Results.ipynb  Test.ipynb  Train BERT en - emotion.ipynb  Train BERT en - sentiment bertweet.ipynb  Train BERT en - sentiment.ipynb  Train BERT en.ipynb  Train BERT es - emotion.ipynb  Train BERT es - sentiment.ipynb  Train BERT es.ipynb  Train BERT.ipynb  Train TwiBETO.ipynb  TwiBETO.ipynb  sweeps.ipynb
pysentimiento/: LinCE.ipynb  __init__.py  analyzer.py  aux.py  config.py  context_hate.py  data.py  emotion.py  hate.py  irony.py  metrics.py  ner.py  preprocessing.py  segmenter.py  semeval.py  sentiment.py  sentiment_pt.py  sentipolc.py  targeted_sa.py  tass.py  training.py  tuning.py
scripts/: hp_tune.sh  hp_tune_en.sh  hp_tune_it.sh  hp_tune_pt.sh  run_all_baselines.sh  run_emotion_experiments.sh  run_en_benchmarks.sh  run_es_benchmarks.sh  run_it_benchmarks.sh  run_lince_benchmarks.sh  run_pt_benchmarks.sh  run_sentiment_experiments.sh  run_targeted_experiments.sh  train_classifiers_en.sh  train_classifiers_es.sh
tests/: analyzer_test.py  preprocessing_test.py
(+212 files in other folders)
