[tool.poetry]
name = "pysentimiento"
version = "0.4.1"
description = "A Transformer-based library for SocialNLP tasks"
authors = ["Juan Manuel Pérez <jmperez@dc.uba.ar>", "Juan Carlos Giudici <jgiudici@dc.uba.ar>", ]
readme = "README.md"
repository = "https://github.com/pysentimiento/pysentimiento/"
homepage = "https://github.com/pysentimiento/pysentimiento/"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
transformers = "4.13"
emoji = "^1.6.1"
torch = "^1.9.0"
sklearn = "^0.0"
datasets = "^1.13.3"


[tool.poetry.dev-dependencies]
ipython = "^7.28.0"
jupyter = "^1.0.0"
jupyterlab = "^3.2.0"
fire = "^0.4.0"
pytest = "^6.2.5"
seaborn = "^0.11.2"
Unidecode = "^1.3.2"
pylint = "^2.11.1"
pytorch-lightning = "^1.5.2"
fasttext = "^0.9.2"
twine = "^3.6.0"
seqeval = "^1.2.2"
torchtext = "^0.11.1"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
