[tool.poetry]
name = "pysentimiento"
version = "0.6.7"
description = "A Transformer-based library for SocialNLP tasks"
authors = ["Juan Manuel Pérez <jmperez@dc.uba.ar>", "Juan Carlos Giudici <jgiudici@dc.uba.ar>", ]
readme = "README.md"
repository = "https://github.com/pysentimiento/pysentimiento/"
homepage = "https://github.com/pysentimiento/pysentimiento/"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
transformers = ">=4.13.0"
emoji = "^1.6.1"
datasets = ">=1.13.3"
torch="^1.13.1"
spacy = "^3.5.0"

[tool.poetry.dev-dependencies]
fire = "^0.4.0"
pytest = "^6.2.5"
Unidecode = "^1.3.2"
pytorch-lightning = "^1.5.2"
twine = "^3.6.0"
seqeval = "^1.2.2"
scikit-learn = "*"
wandb = "^0.13.9"
ipykernel = "^6.18.0"
ipywidgets = ">=7.0, <8.0"
protobuf = "<= 3.20.1"

[tool.poetry.group.old]
optional = true

[tool.poetry.group.old.dependencies]
fasttext-wheel = "^0.9.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
